--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
     	<meta charset="utf-8">
     	<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1"> 
-    	<title>Mechelse Catechismus</title> 
+    	<title>Flash Cards</title> 
         <link rel="stylesheet" href="jquery.mobile.theme-1.3.2.min.css" />
         <link rel="stylesheet" href="jquery.mobile.structure-1.3.2.min.css" />
         <link rel="icon" type="image/png" href="favicon.png" />
@@ -19,7 +19,7 @@
         <!-- Start of first page -->
         <div id="navigation" data-url="navigation" data-role="page">
             <div data-role="header" data-theme="e" data-position="fixed">
-                <h1>Mechelse Catechismus</h1>
+                <h1>Flash Cards</h1>
             </div>
             
             <div data-role="content">
@@ -42,17 +42,17 @@
                 <span id="question"></span>
             </div>        
             <ul id="answerbutton" data-role="listview">
-                <li><a><span>toon het antwoord</span></a></li>
+                <li><a><span>Reveal Answer</span></a></li>
             </ul>
             <fieldset id="rightwrong" class="ui-grid-a">
                 <div class="ui-block-a">
                     <ul id="right" data-role="listview">
-                        <li><a style="background:#68c456;color:white;"><span>juist</span></a></li>
+                        <li><a style="background:#68c456;color:white;"><span>Right</span></a></li>
                     </ul>
                 </div>
                 <div class="ui-block-b">
                     <ul id="wrong" data-role="listview">
-                        <li><a style="background:#ff993f;color:white;"><span>fout</span></a></li>
+                        <li><a style="background:#ff993f;color:white;"><span>Wrong</span></a></li>
                     </ul>
                 </div>	   
             </fieldset>
@@ -67,8 +67,8 @@
         <!-- Start of modal dialog page -->
         <div id="congrats" data-role="dialog">
             <div class="dialog">
-                <p>Proficiat!</p>
-                <p>Je hebt het volledige leerjaar afgewerkt.</p>
+                <p>Congratulations! </p>
+                <p>You've finished the entire set of flash cards.</p>
             </div>
         </div><!-- /page -->        
     </body>
